--- a/hello.html
+++ b/hello.html
@@ -2,6 +2,11 @@
 <html lang="en">
 
 <head>
+    <style>
+        body{
+            background-color:gray;
+        }
+    </style>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,6 +16,7 @@
 <body>
     <h1>hello testing</h1>
     <h2>added h2</h2>
+    
 </body>
 
 </html>
