--- a/hello.html
+++ b/hello.html
@@ -3,8 +3,8 @@
 
 <head>
     <style>
-        body{
-            background-color:gray;
+        body {
+            background-color: gray;
         }
     </style>
     <meta charset="UTF-8">
@@ -14,9 +14,9 @@
 </head>
 
 <body>
-    <h1>hello testing</h1>
+    <h1>hello testing !!!</h1>
     <h2>added h2</h2>
-    
+
 </body>
 
 </html>
